# z-ttk

./: CMakeLists.txt  Readme.md
arch/: CMakeLists.txt
arch/x86-16/kernel/: CMakeLists.txt
arch/x86-16/loader/: CMakeLists.txt  main.c
cmake/: TargetArch.cmake
kernel/: CMakeLists.txt  main.c
